--- a/html/find-item.html
+++ b/html/find-item.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kitchen Supplies</title>
+    <title>Find Items</title>
     <!-- Bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <!-- CSS only -->
@@ -14,8 +14,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" id="font-awesome-css" href="http://localhost/kitchen-sup/html/css/all.min.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.6/js/standalone/selectize.min.js" integrity="sha256-+C0A5Ilqmu4QcSPxrlGpaZxJ04VjsRjKu+G82kl5UJk=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.6/css/selectize.bootstrap3.min.css" integrity="sha256-ze/OEYGcFbPRmvCnrSeKbRTtjG4vGLHXgOqsyLFTRjg=" crossorigin="anonymous" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 </head>
 <body>
     <header class="p-3 mb-3 border-bottom">
@@ -25,11 +26,11 @@
                 <h3><i class="bi bi-box-seam"></i> Kitchen Supplies</h3>
             </a>
     
-            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+            <ul class="nav nav-pills col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                 <li class="nav-item"><a href="create-container.html" class="nav-link px-2 link-dark" title="Create container">+ Container</a></li>
                 <li class="nav-item"><a href="create-item.html" class="nav-link px-2 link-dark" title="Create item">+ Item</a></li>
                 <li class="nav-item"><a href="store-item.html" class="nav-link px-2 link-dark" title="Store item">Store item</a></li>
-                <li class="nav-item active"><a href="find-item.html" class="nav-link px-2 link-dark" title="Find item">Find item</a></li>
+                <li class="nav-item"><a href="find-item.html" class="nav-link px-2 link-dark active" title="Find item">Find item</a></li>
             </ul>
     
             <div class="dropdown text-end">
@@ -46,7 +47,24 @@
         </div>
     </header>
     <main>
+        <div class="container">
+            <div class="row apple-324">
+                <div class="col-md-6">
+                    <form class="form-inline" enctype="multipart/form-data">
+                        <div class="input-group mb-3">
+                            <!-- <input type="text" class="form-control" placeholder="Search"> -->
+                            <input id="cptTitle" name="cptTitle" type="search" class="form-control" placeholder="Search item"/>
+                            <div class="input-group-append">
+                                <button class="btn btn-light" type="submit">
+                                <span><i class="bi bi-search"></i></span>
+                                </button>
+                            </div>
+                        </div>
 
+                    </form>	
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
 
