--- a/html/index.html
+++ b/html/index.html
@@ -17,6 +17,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.6/js/standalone/selectize.min.js" integrity="sha256-+C0A5Ilqmu4QcSPxrlGpaZxJ04VjsRjKu+G82kl5UJk=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.6/css/selectize.bootstrap3.min.css" integrity="sha256-ze/OEYGcFbPRmvCnrSeKbRTtjG4vGLHXgOqsyLFTRjg=" crossorigin="anonymous" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 </head>
 <body>
     <header class="p-3 mb-3 border-bottom">
@@ -41,45 +44,65 @@
     </header>
     <main>
         <div class="container">
-            <div class="row">
-                <a href="http://localhost/kitchen-sup/html/create-container.html" >
-                    <span>
-                        <span>
-                            <i class="bi bi-journal-plus"></i>
-                        </span>
-                        <span>Create container</span>
-                    </span>
-                </a>
-            </div>
-            <div class="row">
-                <a href="http://localhost/kitchen-sup/html/create-item.html" >
-                    <span>
-                        <span>
-                            <i class="bi bi-journal-plus"></i>
-                        </span>
-                        <span>Create item</span>
-                    </span>
-                </a>
-            </div>
-            <div class="row">
-                <a href="http://localhost/kitchen-sup/html/store-item.html" >
-                    <span>
-                        <span>
-                            <i class="bi bi-archive"></i>
-                        </span>
-                        <span>Store item</span>
-                    </span>
-                </a>
-            </div>
-            <div class="row">
-                <a href="http://localhost/kitchen-sup/html/find-item.html" >
-                    <span>
-                        <span>
-                            <i class="bi bi-search"></i>
-                        </span>
-                        <span>Find item</span>
-                    </span>
-                </a>
+            <div class="row apple-324">
+                <div class="col-md-6">
+                    <div class="row mb-3">
+                        <a href="http://localhost/kitchen-sup/html/create-container.html" >
+                            <button class="btn-mango-324">
+                                <h3>
+                                    <span>
+                                        <span>
+                                            <i class="bi bi-journal-plus"></i>
+                                        </span>
+                                        <span>Create container</span>
+                                    </span>
+                                </h3>
+                            </button>
+                        </a>
+                    </div>
+                    <div class="row mb-3">
+                        <a href="http://localhost/kitchen-sup/html/create-item.html" >
+                            <button class="btn-mango-324">
+                                <h3>
+                                    <span>
+                                        <span>
+                                            <i class="bi bi-journal-plus"></i>
+                                        </span>
+                                        <span>Create item</span>
+                                    </span>
+                                </h3>
+                            </button>
+                        </a>
+                    </div>
+                    <div class="row mb-3">
+                        <a href="http://localhost/kitchen-sup/html/store-item.html" >
+                            <button class="btn-mango-324">
+                                <h3>
+                                    <span>
+                                        <span>
+                                            <i class="bi bi-archive"></i>
+                                        </span>
+                                        <span>Store item</span>
+                                    </span>
+                                </h3>
+                            </button>
+                        </a>
+                    </div>
+                    <div class="row mb-3">
+                        <a href="http://localhost/kitchen-sup/html/find-item.html" >
+                            <button class="btn-mango-324">
+                                <h3>
+                                    <span>
+                                        <span>
+                                            <i class="bi bi-search"></i>
+                                        </span>
+                                        <span>Find item</span>
+                                    </span>
+                                </h3>
+                            </button>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
