more html template styling

--- a/html/index.html
+++ b/html/index.html
@@ -49,56 +49,48 @@
                     <div class="row mb-3">
                         <a href="http://localhost/kitchen-sup/html/create-container.html" >
                             <button class="btn-mango-324">
-                                <h3>
-                                    <span>
-                                        <span>
-                                            <i class="bi bi-journal-plus"></i>
-                                        </span>
-                                        <span>Create container</span>
+                                <span>
+                                    <span class="mango-btn-icon">
+                                        <i class="bi bi-journal-plus"></i>
                                     </span>
-                                </h3>
+                                    <span class="mango-btn-label">Create container</span>
+                                </span>
                             </button>
                         </a>
                     </div>
                     <div class="row mb-3">
                         <a href="http://localhost/kitchen-sup/html/create-item.html" >
                             <button class="btn-mango-324">
-                                <h3>
-                                    <span>
-                                        <span>
-                                            <i class="bi bi-journal-plus"></i>
-                                        </span>
-                                        <span>Create item</span>
+                                <span>
+                                    <span class="mango-icon">
+                                        <i class="bi bi-journal-plus"></i>
                                     </span>
-                                </h3>
+                                    <span class="mango-btn-label">Create item</span>
+                                </span>
                             </button>
                         </a>
                     </div>
                     <div class="row mb-3">
                         <a href="http://localhost/kitchen-sup/html/store-item.html" >
                             <button class="btn-mango-324">
-                                <h3>
-                                    <span>
-                                        <span>
-                                            <i class="bi bi-archive"></i>
-                                        </span>
-                                        <span>Store item</span>
+                                <span>
+                                    <span class="mango-icon">
+                                        <i class="bi bi-archive"></i>
                                     </span>
-                                </h3>
+                                    <span class="mango-btn-label">Store item</span>
+                                </span>
                             </button>
                         </a>
                     </div>
                     <div class="row mb-3">
                         <a href="http://localhost/kitchen-sup/html/find-item.html" >
                             <button class="btn-mango-324">
-                                <h3>
-                                    <span>
-                                        <span>
-                                            <i class="bi bi-search"></i>
-                                        </span>
-                                        <span>Find item</span>
+                                <span>
+                                    <span class="mango-icon">
+                                        <i class="bi bi-search"></i>
                                     </span>
-                                </h3>
+                                    <span class="mango-btn-label">Find item</span>
+                                </span>
                             </button>
                         </a>
                     </div>
